syntax = "proto3";

package s3video;

option go_package = "./pb/s3video";

service Videotransporter {
    rpc VideoUpload (stream VideoUpoadRequest) returns (VideoUploadReplay) {}
    rpc VideoDeteilUpload (VideoDeteilUpoadRequest) returns (Message) {}
    rpc VideoDownload (VideoDownloadRequest) returns (VideoDownloadReplay) {}
}

message VideoUpoadRequest {
    bytes data = 1;
    int64 size = 2;
    int64 id = 3;
}

message VideoUploadReplay {
    string newname = 1;
}


message VideoDeteilUpoadRequest {
    string video_uuid = 1;
    string title = 2;
    string explain = 3;
    repeated string tags = 4;
    string category = 5;
}

message Message {
    string msg = 1;
}

message VideoDownloadRequest {
    string name = 1;
    int64 startbytes = 2;
    int64 endbytes = 3;
}

message VideoDownloadReplay {
    bytes data = 1;
}
